<resources>
    <string name="app_name">Neon Store</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_login">Log in</string>

    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="search_hint">Search</string>
    <string name="search_in_hint">Search in</string>

    <string name="filter">Filter</string>
    <string name="sort">Order</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_categories">Categories</string>
    <string name="nav_item_cart">Shopping Cart</string>
    <string name="nav_item_favorites">Favorites</string>
    <string name="nav_item_help">Help</string>

    <string name="order">Order</string>
    <string name="order_created">created</string>
    <string name="order_processed">confirmed</string>
    <string name="order_shipped">shipped</string>
    <string name="order_delivered">delivered</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_categories</item>
        <item>@string/nav_item_cart</item>
        <item>@string/nav_item_favorites</item>
        <item>@string/nav_item_help</item>
    </string-array>

    <string name="title_favorites">Favorites</string>
    <string name="title_cart">Shopping Cart</string>
    <string name="title_help">Help</string>
    <string name="title_categories">Categories</string>
    <string name="title_home">Home</string>
    <string name="title_orders">Orders</string>
    <string name="desc_list_item_icon">Item Icon</string>

    <!-- navigation drawer item icons -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_categories</item>
        <item>@drawable/ic_cart</item>
        <item>@drawable/ic_favorites</item>
        <item>@drawable/ic_help</item>
    </array>
    <string name="title_log_in">Log in</string>
    <string name="title_product">Product</string>
    <string name="title_result">Result</string>

    <string name="title_colors">Colors</string>
    <string name="title_sizes">Sizes</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="top_products_title">Top Products</string>
    <string name="title_account">View orders</string>

    <string name="sort_by_price_asc">Lower price</string>
    <string name="sort_by_price_desc">Higher price</string>

    <string-array name="sort_options">
        <item>@string/sort_by_price_asc</item>
        <item>@string/sort_by_price_desc</item>
    </string-array>

    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="text_only_size">Unique Size</string>

    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="material">Material</string>
    <string name="subcategories">Subcategories</string>
    <string name="none">None</string>

    <string name="order_id">Order number:</string>
    <string name="order_status">Status:</string>
    <string name="order_address">Address:</string>
    <string name="order_received_date">Received date:</string>
    <string name="order_process_date">Process date:</string>
    <string name="order_total">Total:</string>
    <string name="empty_view">No products that match the criteria</string>
    <string name="login_failed">Invalid username or password</string>

</resources>