<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:orderInCategory="90"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_cart"
        android:title="@string/title_cart"
        app:actionLayout="@layout/action_item_with_counter"
        android:icon="@drawable/ic_action_cart"
        android:orderInCategory="100"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_favorites"
        android:title="@string/title_favorites"
        app:actionLayout="@layout/action_item_with_counter"
        android:icon="@drawable/ic_action_favorites"
        android:orderInCategory="100"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>