<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/order_button"
            android:text="@string/sort"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/subcategories_button"
            android:text="@string/subcategories"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <view.ProductGrid
            android:id="@+id/productGrid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_view"
            android:id="@+id/emptyViewText"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone" />


    </RelativeLayout>


</LinearLayout>